# crewai-hierarchical-calculator

./: .gitignore  README.md  pyproject.toml
src/calculator/: crew.py  main.py
src/calculator/config/: agents.yaml
src/first_project/config/: tasks.yaml
