[project]
name = "calculator"
version = "0.1.0"
description = "calculator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "langchain-openai>=0.3.23",
]

[project.scripts]
calculator = "calculator.main:run"
run_crew = "calculator.main:run"
train = "calculator.main:train"
replay = "calculator.main:replay"
test = "calculator.main:test"
run_with_trigger = "calculator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
